--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "eslint-config-rallycoding": "^3.2.0",
+    "firebase": "^5.2.0",
     "react": "16.4.1",
-    "react-native": "0.56.0"
+    "react-native": "0.56.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
     "babel-preset-react-native": "5.0.2",
+    "eslint-plugin-babel": "^5.1.0",
     "jest": "23.4.1",
     "react-test-renderer": "16.4.1"
   },
