--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^5.2.0",
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-navigation": "^2.12.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
