--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-navigation": "^2.12.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-firestore": "^0.5.8",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
